horizontal scroll bug fix

--- a/src/css/style.comp.css
+++ b/src/css/style.comp.css
@@ -1026,6 +1026,8 @@ p {
 .section-work {
   position: relative;
   margin: 5rem 0 10rem; }
+  .section-work .row:first-child {
+    position: relative; }
   .section-work .col-1-of-1 {
     max-width: 114rem;
     height: 10rem;
@@ -1077,6 +1079,8 @@ p {
   @media only screen and (max-width: 40em) {
     .section-contact {
       margin-top: 20rem; } }
+  .section-contact .row:first-child {
+    position: relative; }
   .section-contact .col-1-of-1 {
     max-width: 114rem;
     height: 10rem;
