--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -2,6 +2,10 @@
 	position: relative;
 	margin: 5rem 0 10rem;
 
+	.row:first-child {
+		position: relative;
+	}
+
 	.col-1-of-1 {
 		@include col1Of1;
 		top: -22rem;
@@ -65,6 +69,10 @@
 	@include respond(phone-lg) {
 			margin-top: 20rem;
 		}
+	
+	.row:first-child {
+		position: relative;
+	}
 
 	.col-1-of-1 {
 		@include col1Of1;
